# backend/docs/swagger.json
@@ -11,100 +11,296 @@
     "paths": {
         "/documents": {
             "post": {
+                "tags": [
+                    "Document"
+                ],
                 "summary": "Create Document",
                 "responses": {}
             }
         },
         "/documents/calendar": {
             "post": {
+                "tags": [
+                    "Document"
+                ],
                 "summary": "Get Calendar Documents",
                 "responses": {}
             }
         },
         "/documents/update/{id}": {
             "patch": {
+                "tags": [
+                    "Document"
+                ],
                 "summary": "Update Document",
                 "responses": {}
             }
         },
         "/documents/{id}": {
             "get": {
+                "tags": [
+                    "Document"
+                ],
                 "summary": "Get Document",
                 "responses": {}
             },
             "delete": {
+                "tags": [
+                    "Document"
+                ],
                 "summary": "Delete Document",
                 "responses": {}
             }
         },
         "/files/ai/{id}": {
             "get": {
+                "tags": [
+                    "File"
+                ],
                 "summary": "Get File AI Analysis",
                 "responses": {}
             }
         },
         "/files/ocr/{id}": {
             "get": {
+                "tags": [
+                    "File"
+                ],
                 "summary": "Get File Text",
                 "responses": {}
             }
         },
         "/files/upload": {
             "post": {
+                "tags": [
+                    "File"
+                ],
                 "summary": "Upload File",
                 "responses": {}
             }
         },
         "/files/{id}": {
             "get": {
+                "tags": [
+                    "File"
+                ],
                 "summary": "Get File",
                 "responses": {}
             },
             "delete": {
+                "tags": [
+                    "File"
+                ],
                 "summary": "Delete File",
                 "responses": {}
             }
         },
         "/user-details/ai-credits": {
             "get": {
+                "tags": [
+                    "User-Details"
+                ],
                 "summary": "Get AI Credit Usage",
                 "responses": {}
             }
         },
         "/user-details/update": {
             "patch": {
+                "tags": [
+                    "User-Details"
+                ],
                 "summary": "Update User Profile",
                 "responses": {}
             }
         },
         "/user-details/usage": {
             "get": {
+                "tags": [
+                    "User-Details"
+                ],
                 "summary": "Get User Usage",
                 "responses": {}
             }
         },
         "/users/forgot-password": {
             "post": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "User"
+                ],
                 "summary": "Forgot Password",
-                "responses": {}
+                "parameters": [
+                    {
+                        "description": "Forget Password payload",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.ForgetPasswordRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": true
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": true
+                        }
+                    },
+                    "409": {
+                        "description": "Conflict",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": true
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": true
+                        }
+                    }
+                }
             }
         },
         "/users/google": {
             "post": {
+                "tags": [
+                    "User"
+                ],
                 "summary": "Google Login",
                 "responses": {}
             }
         },
         "/users/login": {
             "post": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "User"
+                ],
                 "summary": "User Login",
-                "responses": {}
+                "parameters": [
+                    {
+                        "description": "Login payload",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.LoginRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": true
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": true
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": true
+                        }
+                    }
+                }
             }
         },
         "/users/reset-password": {
             "post": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "User"
+                ],
                 "summary": "Reset Password",
-                "responses": {}
+                "parameters": [
+                    {
+                        "description": "Reset Password",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.ResetPasswordRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": true
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": true
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": true
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": true
+                        }
+                    },
+                    "409": {
+                        "description": "Conflict",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": true
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": true
+                        }
+                    }
+                }
             }
         },
         "/users/signup": {
@@ -114,6 +310,9 @@
                 ],
                 "produces": [
                     "application/json"
+                ],
+                "tags": [
+                    "User"
                 ],
                 "summary": "User Signup",
                 "parameters": [
@@ -191,8 +390,59 @@
         },
         "/users/verify-otp": {
             "post": {
+                "tags": [
+                    "User"
+                ],
                 "summary": "Verify OTP",
                 "responses": {}
+            }
+        }
+    },
+    "definitions": {
+        "models.ForgetPasswordRequest": {
+            "type": "object",
+            "required": [
+                "email"
+            ],
+            "properties": {
+                "email": {
+                    "type": "string"
+                }
+            }
+        },
+        "models.LoginRequest": {
+            "type": "object",
+            "required": [
+                "email",
+                "password"
+            ],
+            "properties": {
+                "email": {
+                    "type": "string"
+                },
+                "password": {
+                    "type": "string"
+                }
+            }
+        },
+        "models.ResetPasswordRequest": {
+            "type": "object",
+            "required": [
+                "email",
+                "new_password",
+                "otp"
+            ],
+            "properties": {
+                "email": {
+                    "type": "string"
+                },
+                "new_password": {
+                    "type": "string",
+                    "minLength": 8
+                },
+                "otp": {
+                    "type": "string"
+                }
             }
         }
     }
