# backend/routes/document_routes.go
@@ -9,30 +9,35 @@ import (
 )
 
 // @Summary Create Document
+// @Tags Document
 // @Router /documents [post]
 func createDocument(c *gin.Context) {
 	service.CreateDocument(c)
 }
 
 // @Summary Get Document
+// @Tags Document
 // @Router /documents/{id} [get]
 func getDocument(c *gin.Context) {
 	service.GetDocument(c)
 }
 
 // @Summary Delete Document
+// @Tags Document
 // @Router /documents/{id} [delete]
 func deleteDocument(c *gin.Context) {
 	service.DeleteDocument(c)
 }
 
 // @Summary Get Calendar Documents
+// @Tags Document
 // @Router /documents/calendar [post]
 func getCalendarDocuments(c *gin.Context) {
 	service.GetCalendarDocuments(c)
 }
 
 // @Summary Update Document
+// @Tags Document
 // @Router /documents/update/{id} [patch]
 func updateDocument(c *gin.Context) {
 	var updateDocReq models.UpdateDocumentRequest
